--- a/wechat/1index.html
+++ b/wechat/1index.html
@@ -20,6 +20,14 @@
 		<link rel="stylesheet" href="wechat.css">
 
 		<style type="text/css">
+			.container{
+				position:relative;
+				display:flex;
+				width:100%;
+				max-width:640px;
+				height:100%;
+				text-align:center;
+			}
 			.iphone{
 				position: fixed;
 				left: 0px;
@@ -235,6 +243,7 @@
 		</style>
 	</head>
 	<body>
+	<div class="container">
 		<div class="iphone">
 			<div class="iphone-top"></div>
 			<div class="iphone-bottom">
@@ -437,6 +446,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 
 
