--- a/wechat/1index.html
+++ b/wechat/1index.html
@@ -29,7 +29,7 @@
 				text-align:center;
 			}
 			.iphone{
-				position: fixed;
+				position: absolute;
 				left: 0px;
 				top:0px;
 				height: 100%;
@@ -142,7 +142,7 @@
 			}
 
 			.wx-start{
-				position: fixed;
+				position: absolute;
 				left: 0px;
 				top:0px;
 				display: table;
